// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQL: Transaction transaction should fetch transaction by ID 1`] = `
Object {
  "date": "2019-04-26",
  "id": "1",
  "price": 375000,
  "property": Object {
    "paon": "cc551cd9b04a9cc3da0fd21025e8db42828d5299",
    "saon": "cd435dfdc23e7d95665b678f176329c14ac2af4a",
    "street": "PRIZE WALK",
  },
}
`;

exports[`GraphQL: Transaction transactionSearch [presets: perPage 3] with postcode range: 1st page 1`] = `
Array [
  Object {
    "date": "2019-04-26",
    "id": "2",
    "price": 545000,
    "property": Object {
      "paon": "cc551cd9b04a9cc3da0fd21025e8db42828d5299",
      "saon": "1b762366cdf7cc97e2764e932f60c0edc61b5e86",
      "street": "PRIZE WALK",
    },
  },
  Object {
    "date": "2019-04-26",
    "id": "1",
    "price": 375000,
    "property": Object {
      "paon": "cc551cd9b04a9cc3da0fd21025e8db42828d5299",
      "saon": "cd435dfdc23e7d95665b678f176329c14ac2af4a",
      "street": "PRIZE WALK",
    },
  },
  Object {
    "date": "2019-03-25",
    "id": "3",
    "price": 341250,
    "property": Object {
      "paon": "cc551cd9b04a9cc3da0fd21025e8db42828d5299",
      "saon": "fe78fa628e2a410375cb37144fbdff5a766fcee3",
      "street": "PRIZE WALK",
    },
  },
]
`;

exports[`GraphQL: Transaction transactionSearch [presets: perPage 3] with postcode range: 2nd page 1`] = `Array []`;

exports[`GraphQL: Transaction transactionSearch [presets: perPage 3] within date range 1`] = `
Array [
  Object {
    "date": "2019-04-26",
    "id": "2",
    "price": 545000,
  },
  Object {
    "date": "2019-04-26",
    "id": "1",
    "price": 375000,
  },
  Object {
    "date": "2019-03-25",
    "id": "3",
    "price": 341250,
  },
]
`;

exports[`GraphQL: Transaction transactionSearch [presets: perPage 3] within date range: 2nd page 1`] = `
Array [
  Object {
    "date": "2017-11-10",
    "id": "4",
    "price": 38000000,
  },
  Object {
    "date": "2018-05-09",
    "id": "6",
    "price": 246000,
  },
  Object {
    "date": "2017-11-28",
    "id": "5",
    "price": 326600,
  },
]
`;

exports[`GraphQL: Transaction transactionSearch [presets: perPage 3] without criteria 1`] = `
Array [
  Object {
    "date": "2019-04-26",
    "id": "2",
    "price": 545000,
  },
  Object {
    "date": "2019-04-26",
    "id": "1",
    "price": 375000,
  },
  Object {
    "date": "2019-03-25",
    "id": "3",
    "price": 341250,
  },
]
`;
